<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">MeetDay</string>
    <string name="menu_settings">Settings</string>
    <string name="desc"></string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="title_activity_forgot_page">ForgotPage</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="Invite_title">Invite</string>
    <string name="Search_title">Search</string>
    <string name="default_thanks_string">To Helper: Thanks for your help...
        (Press to write more...)</string>
    <string name="login_phone_hint">Phone Number</string>
    <string name="login_nickname_hint">Name</string>
    <string name="title_activity_personal_page">PersonalPage</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">1557090727886607</string>
    <string name="searhFriend">Enter Friend Name</string>
    <string name="def_questiontext">I\'d like to discuss with you</string>
    <string name="thankletter"> Thank you Letter</string>
    <string name="def_thanktext"> Hi\nI\'m enjoying this discussion\nThank you very much.</string>
    <string name="title_activity_grid_item_img_page">GridItemImgPage</string>
    <string name="settings_name">AppRTC Settings</string>
    <string name="disconnect_call">Disconnect Call</string>
    <string name="room_description">        Please enter a room name. Room names are shared with everyone, so think
        of something unique and send it to a friend.
connect_names</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No favorites</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s</string>
    <string name="channel_error_title">Connection error</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or enable capturing to texture in the options.</string>
    <string name="ok">OK</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="muted">Muted</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="toggle_mic">Toggle microphone on/off</string>
    <string name="action_settings">Settings</string>
    <string name="action_loopback">Loopback connection</string>
    <string name="connect_description">Connect to the room</string>
    <string name="add_favorite_description">Add favorite</string>
    <string name="login_phone_btn">Phone</string>
    <string name="Register_text">New to MeetDay? Sign Up</string>
    <string name="forgot_text">Forget Password?</string>
    <string name="signup_by_phone">Sign up</string>
    <string name="login_by_phone">Login</string>
    <string name="login_method">Login</string>
    <string name="login_firstname_hint">First Name</string>
    <string name="login_lastname_hint">Last Name</string>
    <string name="login_email_hint">Email</string>
    <string name="login_id_hint">ID</string>
    <string name="login_phone_number">Phone Number</string>
    <string name="login_pwd_hint">Password</string>
    <string name="login_checkpwd_hint">Check Password</string>
    <string name="login_set_phone_account">Set Phone Account</string>
    <string name="login_country_name">Counrty Name</string>
    <string name="login_done">Done</string>
    <string name="login_connecting">Connecting</string>
    <string name="login_wait">Wait...</string>
    <string name="login_fail">Log in Failed!!!</string>
    <string name="login_offline">You are offline!</string>
    <string name="login_user_connect">account is connecting…</string>
    <string name="login_no_data_found">Welcom to MeetDay...</string>
    <string name="login_no_invalid_number">Phone number or password wrong!</string>
    <string name="asker_friendtitle">Friends</string>
    <string name="asker_officialsubtitle">Official Account</string>
    <string name="asker_friendsubtitle">Friends</string>
    <string name="chat_send_btn">Send</string>
    <string name="dialog_call">Call</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="comm_connect">Connecting \n wait....</string>
    <string name="comm_connected_success">Now, you can talk and draw.</string>
    <string name="comm_connected_error">Connected error!</string>
    <string name="comm_miss_connection">Disconnected!</string>
    <string name="comm_hangup_from_remote">Remote end hung up.</string>
    <string name="comm_disconnect">Hang up the call?</string>
    <string name="comm_quit_hangup">HANG-UP</string>
    <string name="comm_quit_keep">KEEP</string>
    <string name="comm_dialog_wait">waiting</string>
    <string name="comm_dialog_someones_reply">\'s reply</string>
    <string name="comm_dialog_reject_change_board">doesn\'t want to share view</string>
    <string name="comm_dialog_request_switch_wb">wanna share your camera view</string>
    <string name="comm_dialog_role_switch">Switch view?</string>
    <string name="comm_dialog_wait_remote_response">wait for remote response</string>
    <string name="comm_dialog_dont_change">doesn\'t want to change</string>
    <string name="comm_dialog_show_my_preview">This is your view!</string>
    <string name="comm_dialog_show_remote_preview1">This is</string>
    <string name="comm_dialog_show_remote_preview2">\'s view!</string>
    <string name="comm_dialog_save_success">Saved Successfully</string>
    <string name="comm_dialog_save_fail">Saved failed</string>
    <string name="comm_dialog_cant_save_picture">Unable to take pictures</string>
    <string name="comm_dialog_send_a_picture">is sending a picture!</string>
    <string name="comm_dialog_take_a_picture">is taking a picture!</string>
    <string name="act_conn_caller">Caller</string>
    <string name="act_conn_callee">Callee</string>
    <string name="action_videoboard">Video Board</string>
    <string name="action_whiteboard">White Board</string>
    <string name="action_role_switch">Switch view?</string>
    <string name="action_mic">Mic</string>
    <string name="action_pen">Pen</string>
    <string name="action_pic">Picture</string>
    <string name="action_navigator">Navigator</string>
    <string name="action_eraser">Eraser</string>
    <string name="action_Undo">Undo</string>
    <string name="action_eraser_all">Erase All</string>
    <string name="dialog_eraseall_message">Are you sure to erase all the scribble?</string>
    <string name="dialog_eraseall_reject">No</string>
    <string name="dialog_eraseall_ok">Yes</string>
    <string name="dialog_eraseall_cancel">No</string>
    <string name="hist_title">Records</string>
    <string name="hist_date"><u>2015.10.25</u></string>
    <string name="hist_time"><u>10:30</u></string>
    <string name="hist_thankscard_title">ThankYou Notes</string>
    <string name="hist_incoming_arrow">Accepted Collaboration &lt;-</string>
    <string name="hist_call_out_arrow">Dialed Collaboration -&gt;</string>
    <string name="hist_incoming">Incoming Collaboration</string>
    <string name="hist_call_out">Dialing Collaboration</string>
    <string name="hist_miss">Missed Collaboration</string>
    <string name="hist_sent_card">Sent Card</string>
    <string name="hist_recv_card">Received Card</string>
    <string name="hist_sent_msg">Sent Message</string>
    <string name="hist_recv_msg">Received Message</string>
    <string name="sett_personal_info">Personal Info</string>
    <string name="sett_add_friends">Add Friends</string>
    <string name="sett_Invite_friends_to_join_MeetDay">Invite friends to join MeetDay</string>
    <string name="sett_thanks_context">Set Thanks Letter</string>
    <string name="sett_message_context">Set Message</string>
    <string name="sett_feedback">Feedback</string>
    <string name="sett_id">MeetDay ID</string>
    <string name="sett_id_hint">Your ID may begin with letters 
        (a-z, including uppercase can lowercase), numbers and under line by 6~20 character. 
        After setting up, you will not be able to change your ID. </string>
    <string name="sett_fb">Facebook</string>
    <string name="sett_email">Gmail</string>
    <string name="sett_phone_number">Phone Number</string>
    <string name="sett_feedback_title">Customer Service</string>
    <string name="sett_login">Log In</string>
    <string name="sett_logout">Log Out</string>
    <string name="sett_version_name">Version</string>
    <string name="sett_verified">Verified</string>
    <string name="sett_n_verified">Not Verified</string>
    <string name="sett_n_set">Not Set</string>
    <string name="sett_OK">OK</string>
    <string name="sett_Cancel">Cancel</string>
    <string name="sett_wrong_format">Sorry, it is wrong format</string>
    <string name="sett_id_used">ID has been used</string>
    <string name="sett_log_out">Log out</string>
    <string name="sett_to_log_out">Are you sure you want to log out?</string>
    <string name="sett_thank_content">ThankYou Context</string>
    <string name="sett_thanks_letter1">ThankYouNotes 1</string>
    <string name="sett_thanks_letter2">ThankYouNotes 2</string>
    <string name="sett_thanks_letter3">ThankYouNotes 3</string>
    <string name="sett_thanks_letter4">ThankYouNotes 4</string>
    <string name="add_friends_mail_title">May I invite you to use MeetDay</string>
    <string name="add_friends_mail_first_sentence">Please download MeetDay from</string>
    <string name="add_friends_mail_sentence4url">https://play.google.com/store/apps/details?id=com.project1.meetday</string>
    <string name="add_friends_mail_second_sentence">, and add me by</string>
    <string name="add_friends_mail_sentence4id">my MeetDay ID:</string>
    <string name="add_friends_mail_third_sentence">or</string>
    <string name="add_friends_mail_sentence4fone">my phone number:</string>
    <string name="add_friend_editext_hint">Phone Number or ID</string>
    <string name="add_friend_connect">connecting...</string>
    <string name="add_friend_wait">please wait...</string>
    <string name="add_friend_your_friend">You are a friend with</string>
    <string name="add_friend_your_friend_exist">already!</string>
    <string name="add_friend_friend_exist_title">Friend Existed</string>
    <string name="add_friend_cant_add_yourself">You can\'t add yourself!</string>
    <string name="add_friend_add_yourself">Error</string>
    <string name="add_friend_find_friend_message1">Friend Found! (Would you like to add</string>
    <string name="add_friend_find_friend_message2">to your Friend List?)</string>
    <string name="add_friend_find_friend_title">Friends Found</string>
    <string name="add_friend_not_find_message1">Not Found (</string>
    <string name="add_friend_not_find_message2">not found, please try again.)</string>
    <string name="add_friend_not_find_title">Not Found</string>
    <string name="add_friend_add_ok">Done!</string>
    <string name="add_friend_add_fail">Add failed!</string>
    <string name="add_friend_confirm">ok!</string>
    <string name="add_friend_add">Add</string>
    <string name="add_friend_cancel">Cancel</string>
    <string name="pref_room_key">room_preference</string>
    <string name="pref_room_list_key">room_list_preference</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">WebRTC video settings.</string>
    <string name="connect_names">No Name</string>
    <string name="connect_content">Hellow, everyone..</string>
    <string name="privacy_policy_title">Privacy Policy\n</string>
</resources>