<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lilayoutRecieveInfo"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:background="#73c3a7"
            android:gravity="center"
            android:text="Jason"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/date_txt"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_margin="20dip"
            android:text="@string/hist_date"
            android:textColor="@color/dark"
            android:textSize="20sp" 
            android:background="@drawable/underline" />
        
        <TextView
            android:id="@+id/time_txt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dip"
            android:text="@string/hist_time"
            android:textColor="@color/dark"
            android:textSize="20sp" 
            android:background="@drawable/underline" />
                
        <TextView
            android:id="@+id/recordproblem_txt"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/connect_content"
            android:textColor="@color/dark"
            android:background="@drawable/frame" />        
        
    </LinearLayout>

</LinearLayout>